# rtorrent

./: .bazelrc  .clang-format  .dockerignore  .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  Dockerfile  Makefile.am  README.md  WORKSPACE  configure.ac
.github/workflows/: build.yml  linux.yml  macos.yml  publish-rolling.yml  release.yml  test-macos.yml  test-ubuntu.yml  ubuntu.yml
cmake/: FindCppUnit.cmake  FindJSON.cmake  FindTorrent.cmake  FinduWebSockets.cmake  GenerateRTorrentBuildinfo.cmake
doc/: rtorrent.rc  rtorrent.spec  rtorrent@.service
include/: command_helpers.h  control.h  globals.h  option_parser.h  protocol_thread.h  signal_handler.h  thread_base.h  thread_worker.h  websockets_thread.h
include/core/: curl_get.h  curl_socket.h  curl_stack.h  dht_manager.h  download.h  download_factory.h  download_list.h  download_slot_map.h  download_store.h  http_queue.h  manager.h  poll_manager.h  range_map.h  view.h  view_manager.h
include/display/: attributes.h  canvas.h  frame.h  manager.h  text_element.h  text_element_list.h  text_element_string.h  text_element_value.h  window.h  window_download_chunks_seen.h  window_download_list.h  window_download_statusbar.h  window_download_transfer_list.h  window_file_list.h  window_http_queue.h  window_input.h  window_log.h  window_log_complete.h  window_peer_list.h  window_statusbar.h  window_string_list.h  window_text.h  window_title.h  window_tracker_list.h
include/input/: bindings.h  input_event.h  manager.h  path_input.h  text_input.h
include/rpc/: command.h  command_impl.h  command_map.h  command_scheduler.h  command_scheduler_item.h  exec_file.h  fixed_key.h  ip_table_list.h  object_storage.h  parse.h  parse_commands.h  parse_options.h  rpc.h  rpc_json.h  rpc_manager.h  rpc_thread_manager.h  rpc_xml.h  scgi.h  scgi_task.h  xmlrpc.h
include/test/helpers/: assert.h
include/test/rpc/: command_map_test.h  command_slot_test.h  command_test.h  object_storage_test.h  test_parse_options.h
include/test/src/: command_dynamic_test.h
include/ui/: download.h  download_list.h  element_base.h  element_chunks_seen.h  element_download_list.h  element_file_list.h  element_log_complete.h  element_menu.h  element_peer_list.h  element_string_list.h  element_text.h  element_tracker_list.h  element_transfer_list.h  root.h
include/utils/: directory.h  file_status_cache.h  functional_fun.h  indicators.h  list_focus.h  lockfile.h  regex.h  socket_fd.h
include/utils/jsonrpc/: common.h  dispatcher.h  server.h  typemapper.h
include/utils/rapidxml/: rapidxml_print.hpp
scripts/: checks.m4  common.m4
src/: Makefile.am  command_download.cc  command_dynamic.cc  command_events.cc  command_file.cc  command_fs.cc  command_groups.cc  command_helpers.cc  command_helpers.h  command_ip.cc  command_local.cc  command_logging.cc  command_logic.cc  command_network.cc  command_peer.cc  command_scheduler.cc  command_throttle.cc  command_tracker.cc  command_ui.cc  control.cc  control.h  globals.cc  globals.h  main.cc  option_parser.cc  option_parser.h  signal_handler.cc  signal_handler.h  thread_base.cc  thread_base.h  thread_worker.cc  thread_worker.h  websockets_thread.cc
src/core/: curl_get.cc  curl_get.h  curl_socket.cc  curl_socket.h  curl_stack.cc  curl_stack.h  dht_manager.cc  dht_manager.h  download.cc  download.h  download_factory.cc  download_factory.h  download_list.cc  download_list.h  download_slot_map.h  download_store.cc  download_store.h  http_queue.cc  http_queue.h  manager.cc  manager.h  poll_manager.cc  poll_manager.h  range_map.h  view.cc  view.h  view_manager.cc  view_manager.h
src/display/: attributes.h  canvas.cc  canvas.h  frame.cc  frame.h  manager.cc  manager.h  text_element.h  text_element_list.cc  text_element_list.h  text_element_string.cc  text_element_string.h  text_element_value.cc  text_element_value.h  utils.cc  utils.h  window.cc  window.h  window_download_chunks_seen.cc  window_download_chunks_seen.h  window_download_list.cc  window_download_list.h  window_download_statusbar.cc  window_download_statusbar.h  window_download_transfer_list.cc  window_download_transfer_list.h  window_file_list.cc  window_file_list.h  window_http_queue.cc  window_http_queue.h  window_input.cc  window_input.h  window_log.cc  window_log.h  window_log_complete.cc  window_log_complete.h  window_peer_list.cc  window_peer_list.h  window_statusbar.cc  window_statusbar.h  (+8 more)
src/input/: bindings.cc  bindings.h  input_event.cc  input_event.h  manager.cc  manager.h  path_input.cc  path_input.h  text_input.cc  text_input.h
src/rpc/: command.cc  command.h  command_impl.h  command_map.cc  command_map.h  command_scheduler.cc  command_scheduler.h  command_scheduler_item.cc  command_scheduler_item.h  exec_file.cc  exec_file.h  fixed_key.h  ip_table_list.h  object_storage.cc  object_storage.h  parse.cc  parse.h  parse_commands.cc  parse_commands.h  parse_options.cc  parse_options.h  rpc_json.cc  rpc_manager.cc  rpc_thread_manager.cc  rpc_xml.cc  scgi.cc  scgi.h  scgi_task.cc  scgi_task.h  xmlrpc.cc  xmlrpc.h
src/ui/: download.cc  download.h  download_list.cc  download_list.h  element_base.cc  element_base.h  element_chunks_seen.cc  element_chunks_seen.h  element_download_list.cc  element_download_list.h  element_file_list.cc  element_file_list.h  element_log_complete.cc  element_log_complete.h  element_menu.cc  element_menu.h  element_peer_list.cc  element_peer_list.h  element_string_list.cc  element_string_list.h  element_text.cc  element_text.h  element_tracker_list.cc  element_tracker_list.h  element_transfer_list.cc  element_transfer_list.h  root.cc  root.h
src/utils/: directory.cc  directory.h  file_status_cache.cc  file_status_cache.h  functional_fun.h  list_focus.h  lockfile.cc  lockfile.h  socket_fd.cc  socket_fd.h
test/: Makefile.am  main.cc
test/rpc/: command_map_test.cc  command_slot_test.cc  command_test.cc  command_test.h  object_storage_test.cc  test_command_map.cc  test_command_slot.cc  test_parse_options.cc
test/src/: command_dynamic_test.cc  test_command_dynamic.cc
