load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")
load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")

config_setting(
    name = "opt",
    values = {"compilation_mode": "opt"},
    visibility = ["//visibility:private"],
)

COPTS = [
    "-std=c++17",
    "-Werror",
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-Wvla",
] + select({
    "//:opt": [
        "-Ofast",
        "-flto",
    ],
    "//conditions:default": [],
})

LINKOPTS = select({
    "//:opt": [
        "-O3",
        "-flto",
        "-s",
    ],
    "//conditions:default": [],
})

filegroup(
    name = "cmake_rules",
    srcs = [
        "CMakeLists.txt",
    ] + glob([
        "cmake/**/*",
    ]),
)

cmake_external(
    name = "buildinfo",
    cache_entries = {
        "BUILDINFO_ONLY": "ON",
        "USE_RUNTIME_CA_DETECTION": "ON",
    },
    headers_only = True,
    lib_source = "//:cmake_rules",
)

filegroup(
    name = "included_headers",
    srcs = glob(
        ["include/**/*.h"],
        exclude = ["include/buildinfo.h"],
    ),
)

cc_library(
    name = "rtorrent_common",
    srcs = glob(
        ["src/**/*.cc"],
        exclude = ["src/main.cc"],
    ) + ["//:included_headers"],
    copts = COPTS,
    includes = ["include"],
    linkopts = LINKOPTS + select({
        "@platforms//os:macos": [
            "-lxml2",
            "-liconv",
            "-lncurses",
        ],
        "//conditions:default": [
            "-lpthread",
            "-lstdc++",
        ],
    }),
    deps = [
        "//:buildinfo",
        "@curl",
        "@json",
        "@xmlrpc",
        "@libtorrent//:torrent",
    ] + select({
        "@platforms//os:macos": [],
        "//conditions:default": [
            "@ncurses//:ncursesw",
        ],
    }),
)

cc_binary(
    name = "rtorrent",
    srcs = [
        "src/main.cc",
        "//:included_headers",
    ],
    copts = COPTS,
    includes = ["include"],
    linkopts = LINKOPTS,
    linkstatic = True,
    deps = [
        "//:rtorrent_common",
    ],
)

cc_test(
    name = "rtorrent_test",
    srcs = glob([
        "test/**/*.cc",
    ]) + ["//:included_headers"],
    copts = COPTS,
    includes = ["include"],
    linkopts = LINKOPTS,
    linkstatic = True,
    deps = [
        "//:rtorrent_common",
        "@com_google_googletest//:gtest",
    ],
)

pkg_tar(
    name = "rtorrent-bin",
    srcs = ["//:rtorrent"],
    mode = "0755",
    package_dir = "/usr/bin",
    strip_prefix = "/",
)

pkg_tar(
    name = "rtorrent-cfg",
    srcs = ["doc/rtorrent.rc"],
    mode = "0644",
    package_dir = "/etc/rtorrent",
    strip_prefix = "/doc",
)

pkg_tar(
    name = "rtorrent-service",
    srcs = ["doc/rtorrent@.service"],
    mode = "0644",
    package_dir = "/etc/systemd/system",
    strip_prefix = "/doc",
)

pkg_tar(
    name = "rtorrent-deb-data",
    extension = "tar.gz",
    deps = [
        ":rtorrent-bin",
        ":rtorrent-cfg",
        ":rtorrent-service",
    ],
)

pkg_deb(
    name = "rtorrent-deb",
    architecture = "all",
    conffiles = [
        "/etc/rtorrent/rtorrent.rc",
        "/etc/systemd/system/rtorrent@.service",
    ],
    data = ":rtorrent-deb-data",
    description = "a stable and high-performance BitTorrent client",
    homepage = "https://github.com/jesec/rtorrent",
    maintainer = "Jesse Chan <jc@linux.com>",
    package = "rtorrent",
    version = "0.9.8-jc+master",
)
